website/content/v1.2/pro/cli/dkron_agent.md
---
date: 2019-01-21
title: "dkron agent"
slug: dkron_agent
/v1.2/cli/dkron_agent/
---
## dkron agent

Start a dkron agent

### Synopsis

Start a dkron agent that schedule jobs, listen for executions and run executors.
It also runs a web UI.

```
dkron agent [flags]
```

### Options

```
      --advertise-addr string          Address used to advertise to other nodes in the cluster. By default, the bind address is advertised.
      --advertise-rpc-port int         Use the value of rpc-port by default.
      --auto-tls                       Client TLS using generated certificates (default true)
      --backend string                 store backend (default "boltdb")
      --backend-machine strings        store backend machines addresses (default [./dkron.db])
      --bind-addr string               Address to bind network listeners to. (default "0.0.0.0:8946")
      --cert-file string               Path to the client server TLS cert file
      --client-cert-auth               Enable client cert authentication
      --client-crl-file string         Path to the client certificate revocation list file
      --dog-statsd-addr string         DataDog Agent address.
      --dog-statsd-tags strings        Datadog tags, specified as key:value
      --encrypt string                 Key for encrypting network traffic. Must be a base64-encoded 16-byte key.
      --etcd-config-file-path string   etcd node config (default "/etc/dkron/etcd.conf.yml")
  -h, --help                           help for agent
      --http-addr string               Address to bind the UI web server to. Only used when server. (default ":8080")
      --join strings                   An initial agent to join with. This flag can be specified multiple times.
      --key-file string                Path to the client server TLS key file
      --keyspace string                The keyspace to use. A prefix under all data is stored for this instance. (default "dkron")
      --log-level string               Log level (debug, info, warn, error, fatal, panic), defaults to info (default "info")
      --mail-from string               From email address to use.
      --mail-host string               Mail server host address to use for notifications.
      --mail-password string           Mail server password to use.
      --mail-payload string            Notification mail payload.
      --mail-port uint16               Mail server port.
      --mail-subject-prefix string     Notification mail subject prefix. (default "[Dkron]")
      --mail-username string           Mail server username used for authentication.
      --node-name string               Name of this node. Must be unique in the cluster. (default "pris.local")
      --password string                authentication password
      --profile string                 Profile is used to control the timing profiles used. The default if not provided is lan. (default "lan")
      --rpc-port int                   RPC Port used to communicate with clients. Only used when server. The RPC IP Address will be the same as the bind address. (default 6868)
      --server                         This node is running in server mode.
      --statsd-addr string             Statsd Address.
      --tag strings                    Tag can be specified multiple times to attach multiple key/value tag pairs to the given node. Specified as key=value
      --trusted-ca-file string         Path to the client server TLS trusted CA cert file
      --username string                authentication username
      --webhook-header strings         Headers to use when calling the webhook URL. Can be specified multiple times.
      --webhook-payload string         Body of the POST request to send on webhook call.
      --webhook-url string             Webhook url to call for notifications.
```

### Options inherited from parent commands

```
      --config string   config file (default is /etc/dkron/dkron.yml)
```

### SEE ALSO

* [dkron](/cli/dkron/)	 - Professional distributed job scheduling system

###### Auto generated by spf13/cobra on 21-Jan-2019
